Bug 58673 - KeyID in UI do not match Pootle's
Summary: KeyID in UI do not match Pootle's
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.0.0.0.beta2
Hardware: x86-64 (AMD64) Windows (All)
: high major
Assignee: Andras Timar
URL:
Whiteboard: target:4.1.0 target:4.0.0.1
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-23 07:59 UTC by Korrawit Pruegsanusak
Modified: 2012-12-26 10:20 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot comparing UI and Pootle (53.75 KB, image/png)
2012-12-23 08:09 UTC, Korrawit Pruegsanusak
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Korrawit Pruegsanusak 2012-12-23 07:59:53 UTC
Copied from bug 58126 comment 3 by @baffclan:

I install 4.0.beta2 with KeyID.
CWq^||Version 4.0.0.0.beta2 2vcL||(Build ID: 4104d660979c57e1160b5135634f732918460a0)

Option / LOdev / Personalization
"No background image"'s KeyID is B0hl, is not QQ8W.
Comment 1 Korrawit Pruegsanusak 2012-12-23 08:07:10 UTC
Confirmed with 4.0.0 Beta2 on Windows 7 x64.
Comment 2 Korrawit Pruegsanusak 2012-12-23 08:09:44 UTC
Created attachment 72017 [details]
screenshot comparing UI and Pootle

Link to Pootle of this unit (string): https://translations.documentfoundation.org/th/libo_ui/cui/uiconfig/ui.po/translate/#unit=33707594

It seems a lot of strings' KeyID are not match in UI and Pootle, not only this specific string.
Comment 3 Korrawit Pruegsanusak 2012-12-23 08:16:34 UTC
Hello Andras,

Sorry to bother you on this Christmas holiday, but you are our hero for localization task. So, could you please have a look at this bug? Thanks :)

Also, I have found that many of KeyID are removed from .po files in the commit:

> From 9e3b72859ec7871fdb2884860b54fd2a8de30f3d Mon Sep 17 00:00:00 2001
> From: Andras Timar <atimar@suse.com>
> Date: Mon, 03 Dec 2012 13:23:40 +0000
> Subject: update translations for LibreOffice 4.0 beta1
> 
> Change-Id: I35e0bf7dfef1541f76508edb962e89bc5d78e339

I'm not sure if it's related to this bug ...
Comment 4 Andras Timar 2012-12-23 11:39:20 UTC
We do not need KeyIDs in PO files, because they can be generated. 

However, it is sad that this feature finally does not work. 4.0.0 Beta 2 was the last KeyID build so we two options. 

1. Try to find out urgently what happened, generate KeyIDs once more for pot files, and update Pootle.
-- OR --
2. Fix this for 4.1 only. In this case we may consider to use better KeyIDs, personally I dislike non-alphanumeric characters in KeyIDs. With the new widget layout work, we could have longer, e.g. 5-6 chars long KeyIDs with numbers and lower case letters only.

@Tamas: please take a look at it, if you have time. I cannot really work on LibreOffice until January 5, 2013.
Comment 5 Not Assigned 2012-12-25 13:47:53 UTC
Zolnai Tamas committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=db99a31c4e4e7c74d4c4bb7caa747a5752a32757

fdo#58673 Generate the same keyid for pots as for merge



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Tamás Zolnai 2012-12-25 13:58:00 UTC
It was my fault. The input of KeyId generation was not the same in the two case. The previous patch solves this problem.

@Andras Pootle update will synchronize KeyIds.
Comment 7 Not Assigned 2012-12-26 10:16:29 UTC
Zolnai Tamas committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a97bf2e3bc43a709eb72bdc695f96aeecf1174b1&h=libreoffice-4-0

fdo#58673 Generate the same keyid for pots as for merge


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Andras Timar 2012-12-26 10:20:34 UTC
Thanks Tamas, much appreciated.