fdo#58673 Generate the same keyid for pots as for merge

Change-Id: I65c71d22570c62c84d359b12aa5375016be1f69a